k8s/create/deployment-create.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: create-deployment
  labels:
    app: create-persona
spec:
  replicas: 2
  selector:
    matchLabels:
      app: create-persona
  template:
    metadata:
      labels:
        app: create-persona
    spec:
      nodeSelector:
        workload: create
      containers:
        - name: create-container
          image: danysoftdev/p-go-create:latest
          ports:
            - containerPort: 8080
