k8s/create/pod-create.yaml
apiVersion: v1
kind: Pod
metadata:
  name: create-pod
  labels:
    app: create-persona
spec:
  nodeSelector:
    workload: create
  containers:
    - name: create-container
      image: danysoftdev/p-go-create:latest
      ports:
        - containerPort: 8080
