k8s/create/service-create.yaml
apiVersion: v1
kind: Service
metadata:
  name: create-service
  labels:
    app: create-persona
spec:
  selector:
    app: create-persona
  ports:
    - protocol: TCP
      port: 8081       # Puerto dentro del clúster (puede cambiarse si quieres)
      targetPort: 8080 # Puerto del contenedor
  type: ClusterIP
